--- a/index.html.erb
+++ b/index.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="patterns.css">
+    <link rel="stylesheet" href="container.css">
     <link rel="stylesheet" href="masks.css">
   </head>
   <body>
